--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         </style>
     </head>
     <body>
-        <title>Example of a simple HTML page</title>
+        <title>Capstone: Food Insecurity Analysis</title>
         <h2 id="capstone-food-insecurity-analysis">Capstone: Food Insecurity Analysis</h2>
         <h4 id="description">Description</h4>
         <p>The COVID-19 pandemic, climate crisis, regional conflicts, and the war in Ukraine have altogether created severe food shortages across multiple countries in Africa. ​​More than 23 million people are experiencing extreme hunger in Ethiopia, Somalia, and Kenya, which is more than double the previous year. The ongoing war disruptions the global food supply chain, causing a surge in food prices worldwide, and now, African countries are facing the worst food crisis since 1945. This project aims to create a monitoring system for the ongoing food crisis that will identify events, policies, and other socioeconomic factors directly or indirectly linked to food insecurity in the region. We will develop tools that automatically collect relevant news reporting and extract features from texts that are predictive of future food crises. The project will contribute to the fight against world hunger by building a data-driven knowledge base.</p>
