--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <p>Senegal has some interesting terms that show significance when comparing before and after Covid. Words that are seen more frequently post-pandemic are: “epidemics” “coup” “carbon” and “tragedy.” In this context, “epidemics” makes the most intuitive sense. </p>
         <h3 id="visualization">Guinea</h3>
         <object type="text/html" data="./Guinea.html" style="width: 100%; height: 700px;"></object>
+        <p>Guinea shows blockade, flee, and displaced as words seen slightly more frequently post-pandemic</p>
         <h3 id="visualization">Burkina Faso</h3>
         <object type="text/html" data="./BurkinaFaso.html" style="width: 100%; height: 700px;"></object>
         <p>For Burkina Faso, “blockade” is the only word seen significantly more post-pandemic.</p>
@@ -30,5 +31,6 @@
         <p>For Niger, the distribution is a lot less linear, showing greater differences for term frequencies between the two time periods. Lots of words are seen more frequently post-pandemic such as farmland, displaced, siege, and tragedy. </p>
         <h3 id="visualization">All Countries</h3>
         <object type="text/html" data="./all_countries.html" style="width: 100%; height: 700px;"></object>
+        <p>For all the countries together, farmland, catastrophe, blockade, locusts, and epidemics are seen more frequently post-pandemic. However, not by a significant margin.</p>
     </body>
 </html>
