--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p> These visualizations look into how the COVID-19 pandamic may have played a role in the food shortagecrisis in different African countries. All of these visualizations are plotted with post-Covid frequent words on the X-axis and pre-Covid frequent words on the Y-axis. In general, it is hard to discern concretely if any words are more relevant post-pandemic than pre-pandemic. Some countries do have interesting relationships to take note of. </p>
         <h3 id="visualization">Senegal</h3>
         <object type="text/html" data="./Senegal.html" style="width: 100%; height: 700px;"></object>
-        <p>Senegal has some interesting terms that show significance when comparing before and after Covid. Words that are seen more frequently post-pandemic are: “epidemics” “coup” “carbon” and “tragedy.” In this context, “epidemics” makes the most intuitive sense. </p>
+        <p>Senegal has some interesting terms that show significance when comparing before and after Covid. Words that are seen more frequently post-pandemic are: “epidemics” “coup” “carbon” and “tragedy.” In this context, “epidemics” makes the most intuitive sense, as the Covid-19 pandemic is in itself, an epidemic. </p>
         <h3 id="visualization">Guinea</h3>
         <object type="text/html" data="./Guinea.html" style="width: 100%; height: 700px;"></object>
         <p>Guinea shows blockade, flee, and displaced as words seen slightly more frequently post-pandemic</p>
