--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <title>Capstone: Food Insecurity Analysis</title>
+<link rel="stylesheet" href="style.css" />
+<link href="http://fonts.googleapis.com/css?family=Corben:bold" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/css?family=Nobile" rel="stylesheet" type="text/css">
 <script>(function() {
   // If window.HTMLWidgets is already defined, then use it; otherwise create a
   // new object. This allows preceding code to set options that affect the
@@ -1805,8 +1808,10 @@ return e});var th=document.createElement("style");th.textContent="body {transiti
         </div>
         <object id="visualization" type="text/html" style="width: 100%; height: 700px"></object>
         <p id='v_description'></p>
+        <h4 id="cmd">Confusion Matrix for Logistic Regression Model</h4>
+        <br>
+        <img src="conf_mat_40.png" alt="Italian Trulli" class="cm">
     </body>
-<h4>Shap Values</h4>
 <script type="text/javascript">
     
     function renderVisualization() {
